# pcs

./: .gitignore  CHANGELOG.md.in  Makefile.am  configure.ac  mypy.ini  setup.py.in
pcs/: cluster.py.in  pcs.8.in  run.py  settings_default.py  settings_default.py.in  utils.py.in
pcs/lib/commands/: dr.py
pcs_test/: smoke.sh.in
pcs_test/tier0/common/reports/: test_messages.py.in
pcs_test/tier0/lib/commands/cluster/: test_add_nodes.py.in
pcs_test/tier0/lib/corosync/: test_config_parser.py.in  test_live.py.in
pcsd/: bootstrap.rb.in  pcs.rb.in  pcsd-cli.rb.in  remote.rb.in
rpm/: pcs.spec.in
